<resources>
	<string name="action_add">Add</string>
	<string name="action_addall">Add all</string>
	<string name="action_addfromfile">From file</string>
	<string name="action_addfromurl">From URL</string>
	<string name="action_scanbarcode">Scan barcode</string>
	<string name="action_search">Search</string>
	<string name="action_refresh">Refresh</string>
	<string name="action_rss">RSS</string>
	<string name="action_enableturtle">Enable turtle mode</string>
	<string name="action_disableturtle">Disable turtle mode</string>
	<string name="action_sort">Sort list</string>
	<string name="action_sort_alpha">Name</string>
	<string name="action_sort_status">Status</string>
	<string name="action_sort_done">Date done</string>
	<string name="action_sort_added">Date added</string>
	<string name="action_sort_downspeed">Download speed</string>
	<string name="action_sort_upspeed">Upload speed</string>
	<string name="action_sort_ratio">Ratio</string>
	<string name="action_filter">Filter list</string>
	<string name="action_settings">Settings</string>
	<string name="action_help">Help</string>
	<string name="action_start">Start</string>
	<string name="action_start_default">Normal start</string>
	<string name="action_start_forced">Force start</string>
	<string name="action_startall">Start all</string>
	<string name="action_stop">Stop</string>
	<string name="action_stopall">Stop all</string>
	<string name="action_resume">Resume</string>
	<string name="action_resumeall">Resume all</string>
	<string name="action_pause">Pause</string>
	<string name="action_pauseall">Pause all</string>
	<string name="action_remove">Remove</string>
	<string name="action_remove_default">Remove torrent</string>
	<string name="action_remove_withdata">Remove and delete data</string>
	<string name="action_setlabel">Set label</string>
	<string name="action_updatetrackers">Update trackers</string>
	<string name="action_changelocation">Change storage location</string>
	<string name="action_forcerecheck">Force data recheck</string>
	<string name="action_priority_off">Off</string>
	<string name="action_priority_low">Low</string>
	<string name="action_priority_normal">Normal</string>
	<string name="action_priority_high">High</string>
	<string name="action_remoteplay">Remote play in VLC</string>
	<string name="action_download">Download using FTP(S)</string>
	<string name="action_copytoclipboard">Copy to clipboard</string>
	<string name="action_showdetails">Show details</string>
	<string name="action_openwebsite">Open website</string>
	<string name="action_useassearch">Use as new search</string>
	<string name="action_removesettings">Remove settings</string>
	<string name="action_visitwebsite">Visit transdroid.org</string>
	<string name="action_close">Close</string>
	<string name="navigation_nosettings">%1$s allows you to monitor and manage the torrent client you run at home or on your seedbox. Setting things up can be a bit tricky, but we offer step-by-step guides and promise it\'ll be worth it!</string>
	<string name="navigation_emptytorrents">Connected, but no torrents are active within the current filter</string>
	<string name="navigation_emptydetails">Select a torrent to view its details</string>
	<string name="navigation_servers">SERVERS</string>
	<string name="navigation_status">STATUS</string>
	<string name="navigation_labels">LABELS</string>
	<string name="navigation_status_showall">All</string>
	<string name="navigation_status_onlydown">Downloading</string>
	<string name="navigation_status_onlyup">Uploading</string>
	<string name="navigation_status_onlyactive">Active</string>
	<string name="navigation_status_onlyinactive">Inactive</string>
	<plurals name="navigation_torrentsselected">
		<item quantity="one">%1$d torrent selected</item>
		<item quantity="other">%1$d torrents selected</item>
	</plurals>
	<plurals name="navigation_filesselected">
		<item quantity="one">%1$d files selected</item>
		<item quantity="other">%1$d files selected</item>
	</plurals>
	<string name="navigation_selectall">Select all</string>
	<string name="navigation_selectfinished">Select finished</string>
	<string name="navigation_invertselection">Invert selection</string>
	<string name="navigation_pickserver">Add torrent to&#8230;</string>
	<string name="status_status">STATUS: %1$s</string>
	<string name="status_waiting">Waiting to check&#8230;</string>
	<string name="status_checking">Verifying local data&#8230;</string>
	<string name="status_waitingtodl">Waiting to download %s</string>
	<string name="status_error">Error&#8230;</string>
	<string name="status_size1">%1$s OF %2$s (%3$s)</string>
	<string name="status_size2">%1$s, UPLOADED %2$s</string>
	<string name="status_sincedate">SINCE %1$s</string>
	<string name="status_eta">~ %1$s</string>
	<string name="status_etalong">ETA %1$s</string>
	<string name="status_ofsize">OF %1$s</string>
	<string name="status_unknowneta">UNKNOWN ETA</string>
	<string name="status_ratio">RATIO %1$s</string>
	<string name="status_seeders">%1$s OF %2$s SEEDERS</string>
	<string name="status_leechers">%1$s OF %2$s LEECHERS</string>
	<string name="status_speed_up" translatable="false">↑ %1$s</string>
	<string name="status_speed_down" translatable="false">↓ %1$s</string>
	<string name="status_speed_down_details" translatable="false">%1$s ↓</string>
	<string name="status_downloading">Downloading</string>
	<string name="status_seeding">Seeding</string>
	<string name="status_paused">Paused</string>
	<string name="status_queued">Queued</string>
	<string name="status_stopped">Stopped</string>
	<string name="status_unknown">Unknown status</string>
	<string name="status_priority_off">Not downloaded</string>
	<string name="status_priority_low">Low priority</string>
	<string name="status_priority_normal">Normal priority</string>
	<string name="status_priority_high">High priority</string>
	<string name="status_trackers">TRACKERS</string>
	<string name="status_errors">ERRORS</string>
	<string name="status_files">FILES</string>
	<string name="status_maxspeed">Maximum transfer speeds</string>
	<string name="status_maxspeed_down">MAX DOWNLOAD</string>
	<string name="status_maxspeed_up">MAX UPLOAD</string>
	<string name="status_maxspeed_unit">KB/S</string>
	<string name="status_maxspeed_reset">Reset</string>
	<string name="status_maxspeed_novalue" translatable="false">-</string>
	<string name="status_update">Update</string>
	<plurals name="status_service_added">
		<item quantity="one">New torrent added</item>
		<item quantity="other">%1$s new torrents added</item>
	</plurals>
	<plurals name="status_service_finished">
		<item quantity="one">Torrent is finished</item>
		<item quantity="other">%1$s torrents are finished</item>
	</plurals>
	<plurals name="status_service_addedfinished">
		<item quantity="one">%1$s added, %2$s finished torrent</item>
		<item quantity="other">%1$s added, %2$s finished torrents</item>
	</plurals>
	<string name="status_service_andothers">%1$s and others</string>
	<string name="labels_showall">All labels</string>
	<string name="labels_unlabeled">Unlabeled</string>
	<string name="labels_newlabel">New label</string>
	<string name="labels_no_support">Setting a label is not supported by your client</string>
	<string name="status_label_pick">PICK A LABEL</string>
	<string name="status_label_new">NEW LABEL</string>
	<string name="status_label_remove">Remove label</string>
	<string name="status_label_hint">E.g. movies or linux</string>
	<string name="result_added">%1$s added (refreshing)</string>
	<string name="result_removed">%1$s removed</string>
	<string name="result_removed_with_data">%1$s removed and data deleted</string>
	<string name="result_resumed">%1$s resumed (refreshing)</string>
	<string name="result_stopped">%1$s stopped (refreshing)</string>
	<string name="result_started">%1$s started (refreshing)</string>
	<string name="result_paused">%1$s paused (refreshing)</string>
	<string name="result_paused_all">Torrents paused (refreshing)</string>
	<string name="result_resumed_all">Torrents resumed (refreshing)</string>
	<string name="widget_filter">SERVER VIEW</string>
	<string name="widget_lookfeel">LOOK &amp; FEEL</string>
	<string name="widget_reversesortorder">Reversed sort order</string>
	<string name="widget_usedarktheme">Use dark theme (no preview)</string>
	<string name="pref_name">Name</string>
	<string name="pref_name_optional">Optional personal name</string>
	<string name="pref_searchurl">Direct search URL</string>
	<string name="pref_searchurl_info">%s will be replaced by the search query</string>
	<string name="pref_cookies">Cookies</string>
	<string name="pref_cookies_info">Optional; use the key1=value1;key2=value2 format</string>
	<string name="pref_servertype">Server type</string>
	<string name="pref_address">IP or host name</string>
	<string name="pref_port">Port number</string>
	<string name="pref_user">User name</string>
	<string name="pref_pass">Password</string>
	<string name="pref_advanced">Advanced settings</string>
	<string name="pref_localaddress">Local IP or host</string>
	<string name="pref_localaddress_info">When connected to the specified local network</string>
	<string name="pref_localnetwork">Local network</string>
	<string name="pref_localnetwork_info">The server\'s local network SSID</string>
	<string name="pref_folder">Folder</string>
	<string name="pref_folder_info">Usually empty</string>
	<string name="pref_optional">Optional settings</string>
	<string name="pref_alarmdone">Finished notification</string>
	<string name="pref_alarmdone_info">Notify when a torrent finishes</string>
	<string name="pref_alarmnew">New torrent notification</string>
	<string name="pref_alarmnew_info">Nofity when a torrent was added</string>
	<string name="pref_os">Server OS</string>
	<string name="pref_downdir">Download directory</string>
	<string name="pref_downdir_info">Manually set absolute path for remote connections</string>
	<string name="pref_timeout">Connection timeout</string>
	<string name="pref_timeout_info">Number of seconds before a connection attempt is aborted</string>
	<string name="pref_ftpurl">Base FTP(S) url</string>
	<string name="pref_ftpurl_into">For example ftp://me@server/downloads/</string>
	<string name="pref_ftppass">FTP(S) password</string>
	<string name="pref_sslenable">Use SSL</string>
	<string name="pref_sslenable_info">Connect using https</string>
	<string name="pref_sslkey">Custom SSL thumbprint (SHA-1)</string>
	<string name="pref_sslkey_info">Permit only connections to this specific certificate</string>
	<string name="pref_sslacceptall">Accept all SSL certificates</string>
	<string name="pref_sslacceptall_info">Allow all connections from any thumbprint</string>
	<string name="pref_dormantasinactive">Treat dormant torrents as inactive</string>
	<string name="pref_dormantasinactive_info">Torrents at 0KB/s (no data transfer) will be filtered as being inactive</string>
	<string name="pref_checkupdates">Check for updates</string>
	<string name="pref_checkupdates_info">Check transdroid.org for latest app version</string>
	<string name="pref_usedarktheme">Use dark UI theme</string>
	<string name="pref_usedarktheme_info">Requires a restart to take effect</string>
	<string name="pref_clearsearch">Clear search history</string>
	<string name="pref_import">Import settings</string>
	<string name="pref_export">Export settings</string>
	<string name="pref_sendlog">Send error log</string>
	<string name="pref_sendlog_info">Get support or report a bug</string>
	<string name="pref_installhelp">View install guides</string>
	<string name="pref_installhelp_info">Available at transdroid.org/download</string>
	<string name="pref_changelog">Recent changes</string>
	<string name="system_developer" translatable="false">\u00A9 Eric Kok, 2312 development</string>
	<string name="system_license" translatable="false">Published under GNU General Public License v3</string>
	<string name="system_description">Manage your torrents from your Android device</string>
</resources>