<!--
  Copyright 2010-2013 Eric Kok et al.
  
  Transdroid is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.
  
  Transdroid is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.
  
  You should have received a copy of the GNU General Public License
  along with Transdroid.  If not, see <http://www.gnu.org/licenses/>.
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

	<item
		android:id="@+id/action_add"
		android:icon="?attr/ic_action_new"
		android:showAsAction="ifRoom"
		android:title="@string/action_add"
		android:orderInCategory="100">
		<menu>
			<item android:id="@+id/action_add_fromurl" android:title="@string/action_addfromurl" />
			<item android:id="@+id/action_add_fromfile" android:title="@string/action_addfromfile" />
			<item android:id="@+id/action_add_frombarcode" android:title="@string/action_scanbarcode" />
		</menu>
	</item>
	<item
		android:id="@+id/action_search"
		android:icon="?attr/ic_action_search"
		android:showAsAction="collapseActionView|ifRoom"
		android:title="@string/action_search"
		android:orderInCategory="101"/>
	<item
		android:id="@+id/action_rss"
		android:icon="?attr/ic_action_rss"
		android:showAsAction="ifRoom"
		android:title="@string/action_rss"
		android:orderInCategory="900"/>
	<item
		android:id="@+id/action_enableturtle"
		android:icon="@drawable/ic_action_turtle_disabled"
		android:showAsAction="ifRoom"
		android:title="@string/action_enableturtle"
		android:orderInCategory="901"/>
	<item
		android:id="@+id/action_disableturtle"
		android:showAsAction="ifRoom"
		android:icon="@drawable/ic_action_turtle_enabled"
		android:title="@string/action_disableturtle"
		android:orderInCategory="902"/>
	<item
		android:id="@+id/action_refresh"
		android:icon="?attr/ic_action_refresh"
		android:showAsAction="always"
		android:title="@string/action_refresh"
		android:orderInCategory="903"/>
	<item
		android:id="@+id/action_sort"
		android:icon="?attr/ic_action_sort_by_size"
		android:showAsAction="ifRoom"
		android:title="@string/action_sort"
		android:orderInCategory="904">
		<menu>
			<item android:id="@+id/action_sort_byname" android:title="@string/action_sort_alpha" />
			<item android:id="@+id/action_sort_status" android:title="@string/action_sort_status" />
			<item android:id="@+id/action_sort_done" android:title="@string/action_sort_done" />
			<item android:id="@+id/action_sort_added" android:title="@string/action_sort_added" />
			<item android:id="@+id/action_sort_upspeed" android:title="@string/action_sort_upspeed" />
			<item android:id="@+id/action_sort_ratio" android:title="@string/action_sort_ratio" />
		</menu>
	</item>
	<item
		android:id="@+id/action_filter"
		android:icon="?attr/ic_action_filter"
		android:showAsAction="ifRoom"
		android:title="@string/action_filter"
		android:orderInCategory="905"/>
	<item
		android:id="@+id/action_help"
		android:showAsAction="always"
		android:title="@string/action_help"
		android:orderInCategory="906"/>
	<item
		android:id="@+id/action_settings"
		android:showAsAction="always"
		android:title="@string/action_settings"
		android:orderInCategory="907"/>

</menu>
