<!--
  Copyright 2010-2013 Eric Kok et al.
  
  Transdroid is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.
  
  Transdroid is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.
  
  You should have received a copy of the GNU General Public License
  along with Transdroid.  If not, see <http://www.gnu.org/licenses/>.
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

	<item
		android:id="@+id/action_resume"
		android:icon="?attr/ic_action_resume"
		android:showAsAction="always"
		android:title="@string/action_resume" />
	<item
		android:id="@+id/action_pause"
		android:icon="?attr/ic_action_pause"
		android:showAsAction="always"
		android:title="@string/action_pause" />
	<item
		android:id="@+id/action_start"
		android:icon="?attr/ic_action_start"
		android:showAsAction="always"
		android:title="@string/action_start" />
	<item
		android:id="@+id/action_stop"
		android:icon="?attr/ic_action_stop"
		android:showAsAction="always"
		android:title="@string/action_stop" />
	<item
		android:id="@+id/action_remove"
		android:icon="?attr/ic_action_remove"
		android:showAsAction="always"
		android:title="@string/action_remove">
		<menu>
			<item android:id="@+id/action_remove_default" android:title="@string/action_remove_default" />
			<item android:id="@+id/action_remove_withdata" android:title="@string/action_remove_withdata" />
		</menu>
	</item>
	<item
		android:id="@+id/action_setlabel"
		android:icon="?attr/ic_action_labels"
		android:showAsAction="ifRoom"
		android:title="@string/action_setlabel" />

</menu>
