<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2010-2013 Eric Kok et al.
  
  Transdroid is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.
  
  Transdroid is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.
  
  You should have received a copy of the GNU General Public License
  along with Transdroid.  If not, see <http://www.gnu.org/licenses/>.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
	
	<EditTextPreference
		android:key="websearch_name"
		android:title="@string/pref_name"
		android:summary="@string/pref_name_optional"
		android:inputType="textNoSuggestions" />
	
	<EditTextPreference
		android:key="websearch_baseurl"
		android:title="@string/pref_searchurl"
		android:summary="@string/pref_searchurl_info"
		android:inputType="textUri" />
	
	<EditTextPreference
		android:key="websearch_cookies"
		android:title="@string/pref_cookies"
		android:summary="@string/pref_cookies_info"
		android:inputType="textUri" />
	
</PreferenceScreen>
