<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:padding="@dimen/margin_default" >

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal"
		android:layout_marginBottom="@dimen/margin_half"
		android:layout_marginTop="@dimen/margin_half"
		android:drawableLeft="@drawable/ic_launcher"
		android:drawablePadding="@dimen/margin_half"
		android:fontFamily="sans-serif-condensed"
		android:text="@string/app_name"
		android:textColor="@android:color/white"
		android:textSize="36sp" />

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal"
		android:gravity="center"
		android:text="@string/system_description" />

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal"
		android:layout_marginTop="@dimen/margin_default"
		android:fontFamily="sans-serif-condensed"
		android:gravity="center"
		android:text="@string/system_developer"
		android:textColor="@android:color/white"
		android:textSize="18sp" />

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal"
		android:layout_marginBottom="@dimen/margin_default"
		android:layout_marginTop="4dip"
		android:gravity="center"
		android:text="@string/system_license" />

</LinearLayout>